# voice

./: .gitignore  CLAUDE.md  README.md  progress.md  pyproject.toml
assets/: .gitkeep
docs/: HANDOFF.md  acceptable-use.md  accessibility.md  architecture.md  consent.md  offline.md  provenance.md  spec.md  watermark-eval.md
docs/phases/: README.md  phase-0-model-selection.md  phase-1-mvp.md  phase-2-queue-and-management.md  phase-3-safeguards-and-provenance.md  phase-4-packaging-and-beta.md
packaging/: .gitkeep
scripts/: ab_listen_test.py  watermark_eval.py
src/voiceconv/: __init__.py  __main__.py
src/voiceconv/app/: __init__.py  _app_state.py  _guidance.py  _queue_bridge.py  _workers.py  main.py
src/voiceconv/audio/: __init__.py  _codec.py  _normalize.py  _provenance.py  _watermark.py
src/voiceconv/inference/: __init__.py  engine.py  ipc.py  shm_buffer.py  worker_adapter.py
tests/: __init__.py
tests/app/: conftest.py  test_accessibility.py  test_convert_vm.py  test_first_run_vm.py  test_guidance.py  test_profile_library_vm.py  test_profile_vm.py  test_queue_vm.py  test_settings_vm.py
tests/audio/: test_codec.py  test_normalize.py  test_provenance.py  test_watermark.py
tests/inference/: __init__.py  test_ipc.py  test_worker_adapter.py
tests/integration/: conftest.py  test_e2e.py  test_long_file.py  test_offline.py
tests/services/: test_converter.py  test_diagnostics.py  test_job.py  test_queue.py  test_runner.py
tests/storage/: test_logging_setup.py  test_profile.py  test_settings.py
tests/worker/: __init__.py  test_host.py
(+43 files in other folders)
